修复了mds和oes的配置文件在线编辑功能
