# docs/swagger.yaml
@@ -1039,30 +1039,43 @@ definitions:
         example: 100
         type: integer
     type: object
-  conf.ListMdsConfRequest:
-    properties:
-      dir_name:
-        description: |-
-          文件夹名称
-          required: true
-          example: "all"
-        enum:
-        - all
-        - host_01
-        - host_02
-        - host_03
-        type: string
-      mds_colony_id:
-        description: |-
-          mds集群ID
-          required: true
-          example: 1
-        type: integer
-    required:
-    - dir_name
-    - mds_colony_id
-    type: object
   conf.PagMdsConfReply:
+    properties:
+      code:
+        description: |-
+          状态码
+          Example: 200
+        type: integer
+      data:
+        allOf:
+        - $ref: '#/definitions/fileutil.FileInfo'
+        description: |-
+          数据
+          可以是任意类型的数据
+      msg:
+        description: |-
+          信息
+          Example: "success"
+        type: string
+    type: object
+  conf.PagOesConfReply:
+    properties:
+      code:
+        description: |-
+          状态码
+          Example: 200
+        type: integer
+      data:
+        allOf:
+        - $ref: '#/definitions/fileutil.FileInfo'
+        description: |-
+          数据
+          可以是任意类型的数据
+      msg:
+        description: |-
+          信息
+          Example: "success"
+        type: string
     type: object
   errors.Error:
     properties:
@@ -1075,6 +1088,21 @@ definitions:
         type: string
       reason:
         type: string
+    type: object
+  fileutil.FileInfo:
+    properties:
+      children:
+        items:
+          $ref: '#/definitions/fileutil.FileInfo'
+        type: array
+      is_dir:
+        type: boolean
+      mod_time:
+        type: string
+      name:
+        type: string
+      size:
+        type: integer
     type: object
   host.CreateOrUpdateHosrRequest:
     properties:
@@ -4886,6 +4914,161 @@ paths:
       summary: 登陆接口
       tags:
       - 用户管理
+  /api/v1/mds/{colony_num}/conf/{dir_name}:
+    get:
+      consumes:
+      - application/json
+      description: 获取指定目录下的mds配置文件列表
+      parameters:
+      - description: 集群编号
+        in: path
+        name: colony_num
+        required: true
+        type: string
+      - description: 目录名称
+        in: path
+        name: dir_name
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功返回配置文件列表
+          schema:
+            $ref: '#/definitions/conf.PagMdsConfReply'
+        "400":
+          description: 请求参数错误
+          schema:
+            $ref: '#/definitions/errors.Error'
+        "500":
+          description: 服务器内部错误
+          schema:
+            $ref: '#/definitions/errors.Error'
+      security:
+      - ApiKeyAuth: []
+      summary: 获取mds配置文件列表
+      tags:
+      - mds配置管理
+    post:
+      consumes:
+      - multipart/form-data
+      description: 上传mds配置文件到指定目录
+      parameters:
+      - description: 集群编号
+        in: path
+        name: colony_num
+        required: true
+        type: string
+      - description: 目录名称
+        in: path
+        name: dir_name
+        required: true
+        type: string
+      - description: 配置文件
+        in: formData
+        name: file
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 上传成功
+          schema:
+            $ref: '#/definitions/common.MapAPIReply'
+        "400":
+          description: 请求参数错误
+          schema:
+            $ref: '#/definitions/errors.Error'
+        "500":
+          description: 服务器内部错误
+          schema:
+            $ref: '#/definitions/errors.Error'
+      security:
+      - ApiKeyAuth: []
+      summary: 上传mds配置文件
+      tags:
+      - mds配置管理
+  /api/v1/mds/{colony_num}/conf/{dir_name}/{filename}:
+    delete:
+      consumes:
+      - application/json
+      description: 删除指定的mds配置文件
+      parameters:
+      - description: 集群编号
+        in: path
+        name: colony_num
+        required: true
+        type: string
+      - description: 目录名称
+        in: path
+        name: dir_name
+        required: true
+        type: string
+      - description: 文件名
+        in: path
+        name: filename
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 删除成功
+          schema:
+            $ref: '#/definitions/common.MapAPIReply'
+        "400":
+          description: 请求参数错误
+          schema:
+            $ref: '#/definitions/errors.Error'
+        "500":
+          description: 服务器内部错误
+          schema:
+            $ref: '#/definitions/errors.Error'
+      security:
+      - ApiKeyAuth: []
+      summary: 删除mds配置文件
+      tags:
+      - mds配置管理
+    get:
+      consumes:
+      - application/json
+      description: 下载指定的mds配置文件
+      parameters:
+      - description: 集群编号
+        in: path
+        name: colony_num
+        required: true
+        type: string
+      - description: 目录名称
+        in: path
+        name: dir_name
+        required: true
+        type: string
+      - description: 文件名
+        in: path
+        name: filename
+        required: true
+        type: string
+      produces:
+      - application/octet-stream
+      responses:
+        "200":
+          description: 下载成功，返回文件流
+        "400":
+          description: 请求参数错误
+          schema:
+            $ref: '#/definitions/errors.Error'
+        "500":
+          description: 服务器内部错误
+          schema:
+            $ref: '#/definitions/errors.Error'
+      security:
+      - ApiKeyAuth: []
+      summary: 下载mds配置文件
+      tags:
+      - mds配置管理
   /api/v1/mds/colony:
     get:
       consumes:
@@ -5075,162 +5258,6 @@ paths:
       summary: 更新mds集群
       tags:
       - mds集群管理
-  /api/v1/mds/conf/delete:
-    delete:
-      consumes:
-      - application/json
-      description: 删除指定的MDS配置文件
-      parameters:
-      - description: MDS集群ID
-        format: int32
-        in: query
-        name: mds_colony_id
-        required: true
-        type: integer
-      - description: 目录名称
-        in: query
-        name: dir_name
-        required: true
-        type: string
-      - description: 文件名
-        in: query
-        name: filename
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 删除成功
-          schema:
-            $ref: '#/definitions/common.MapAPIReply'
-        "400":
-          description: 请求参数错误
-          schema:
-            $ref: '#/definitions/errors.Error'
-        "500":
-          description: 服务器内部错误
-          schema:
-            $ref: '#/definitions/errors.Error'
-      security:
-      - ApiKeyAuth: []
-      summary: 删除MDS配置文件
-      tags:
-      - MDS配置管理
-  /api/v1/mds/conf/download:
-    get:
-      consumes:
-      - application/json
-      description: 下载指定的MDS配置文件
-      parameters:
-      - description: MDS集群ID
-        format: int32
-        in: query
-        name: mds_colony_id
-        required: true
-        type: integer
-      - description: 目录名称
-        in: query
-        name: dir_name
-        required: true
-        type: string
-      - description: 文件名
-        in: query
-        name: filename
-        required: true
-        type: string
-      produces:
-      - application/octet-stream
-      responses:
-        "200":
-          description: 下载成功，返回文件流
-        "400":
-          description: 请求参数错误
-          schema:
-            $ref: '#/definitions/errors.Error'
-        "500":
-          description: 服务器内部错误
-          schema:
-            $ref: '#/definitions/errors.Error'
-      security:
-      - ApiKeyAuth: []
-      summary: 下载MDS配置文件
-      tags:
-      - MDS配置管理
-  /api/v1/mds/conf/list:
-    get:
-      consumes:
-      - application/json
-      description: 获取指定目录下的MDS配置文件列表
-      parameters:
-      - description: 请求参数
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/conf.ListMdsConfRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 成功返回配置文件列表
-          schema:
-            $ref: '#/definitions/conf.PagMdsConfReply'
-        "400":
-          description: 请求参数错误
-          schema:
-            $ref: '#/definitions/errors.Error'
-        "500":
-          description: 服务器内部错误
-          schema:
-            $ref: '#/definitions/errors.Error'
-      security:
-      - ApiKeyAuth: []
-      summary: 获取MDS配置文件列表
-      tags:
-      - MDS配置管理
-  /api/v1/mds/conf/upload:
-    post:
-      consumes:
-      - multipart/form-data
-      description: 上传MDS配置文件到指定目录
-      parameters:
-      - description: MDS集群ID
-        format: int32
-        in: formData
-        name: mds_colony_id
-        required: true
-        type: integer
-      - description: 目录名称
-        in: formData
-        name: dir_name
-        required: true
-        type: string
-      - description: 配置文件
-        in: formData
-        name: file
-        required: true
-        type: file
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 上传成功
-          schema:
-            $ref: '#/definitions/common.MapAPIReply'
-        "400":
-          description: 请求参数错误
-          schema:
-            $ref: '#/definitions/errors.Error'
-        "500":
-          description: 服务器内部错误
-          schema:
-            $ref: '#/definitions/errors.Error'
-      security:
-      - ApiKeyAuth: []
-      summary: 上传MDS配置文件
-      tags:
-      - MDS配置管理
   /api/v1/mds/node:
     get:
       consumes:
@@ -5609,6 +5636,161 @@ paths:
       summary: 更新mon节点
       tags:
       - mon节点管理
+  /api/v1/oes/{colony_num}/conf/{dir_name}:
+    get:
+      consumes:
+      - application/json
+      description: 获取指定目录下的oes配置文件列表
+      parameters:
+      - description: 集群编号
+        in: path
+        name: colony_num
+        required: true
+        type: string
+      - description: 目录名称
+        in: path
+        name: dir_name
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功返回配置文件列表
+          schema:
+            $ref: '#/definitions/conf.PagOesConfReply'
+        "400":
+          description: 请求参数错误
+          schema:
+            $ref: '#/definitions/errors.Error'
+        "500":
+          description: 服务器内部错误
+          schema:
+            $ref: '#/definitions/errors.Error'
+      security:
+      - ApiKeyAuth: []
+      summary: 获取oes配置文件列表
+      tags:
+      - oes配置管理
+    post:
+      consumes:
+      - multipart/form-data
+      description: 上传oes配置文件到指定目录
+      parameters:
+      - description: 集群编号
+        in: path
+        name: colony_num
+        required: true
+        type: string
+      - description: 目录名称
+        in: path
+        name: dir_name
+        required: true
+        type: string
+      - description: 配置文件
+        in: formData
+        name: file
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 上传成功
+          schema:
+            $ref: '#/definitions/common.MapAPIReply'
+        "400":
+          description: 请求参数错误
+          schema:
+            $ref: '#/definitions/errors.Error'
+        "500":
+          description: 服务器内部错误
+          schema:
+            $ref: '#/definitions/errors.Error'
+      security:
+      - ApiKeyAuth: []
+      summary: 上传oes配置文件
+      tags:
+      - oes配置管理
+  /api/v1/oes/{colony_num}/conf/{dir_name}/{filename}:
+    delete:
+      consumes:
+      - application/json
+      description: 删除指定的oes配置文件
+      parameters:
+      - description: 集群编号
+        in: path
+        name: colony_num
+        required: true
+        type: string
+      - description: 目录名称
+        in: path
+        name: dir_name
+        required: true
+        type: string
+      - description: 文件名
+        in: path
+        name: filename
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 删除成功
+          schema:
+            $ref: '#/definitions/common.MapAPIReply'
+        "400":
+          description: 请求参数错误
+          schema:
+            $ref: '#/definitions/errors.Error'
+        "500":
+          description: 服务器内部错误
+          schema:
+            $ref: '#/definitions/errors.Error'
+      security:
+      - ApiKeyAuth: []
+      summary: 删除oes配置文件
+      tags:
+      - oes配置管理
+    get:
+      consumes:
+      - application/json
+      description: 下载指定的oes配置文件
+      parameters:
+      - description: 集群编号
+        in: path
+        name: colony_num
+        required: true
+        type: string
+      - description: 目录名称
+        in: path
+        name: dir_name
+        required: true
+        type: string
+      - description: 文件名
+        in: path
+        name: filename
+        required: true
+        type: string
+      produces:
+      - application/octet-stream
+      responses:
+        "200":
+          description: 下载成功，返回文件流
+        "400":
+          description: 请求参数错误
+          schema:
+            $ref: '#/definitions/errors.Error'
+        "500":
+          description: 服务器内部错误
+          schema:
+            $ref: '#/definitions/errors.Error'
+      security:
+      - ApiKeyAuth: []
+      summary: 下载oes配置文件
+      tags:
+      - oes配置管理
   /api/v1/oes/colony:
     get:
       consumes:
